--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
