--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DATABASE_HOST=localhost
 DATABASE_USER=root
 DATABASE_PASSWORD=Tpta1401
 DATABASE=web_movie_online
+EMAIL=vttanhom3@gmail.com
+EMAIL_PASSWORD=fkze pfkg dpax rgym
 
